--- a/source/backend/web/css/site.css
+++ b/source/backend/web/css/site.css
@@ -292,6 +292,23 @@ a.desc:after {
     padding-right: 25px;
 }
 
+.center {
+    text-align: center;
+}
+
+#login-form {
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    padding: 10px 20px 40px;
+    background-color: #f9f9f9;
+    box-shadow: 0px 0px 10px #8d8d8d;
+}
+
+.site-login .col-lg-5 {
+    margin-left: 29%;
+    margin-top: 50px;
+}
+
 
 /* align the logout "link" (button in form) of the navbar */
 .nav li > form > button.logout {
