--- a/source/frontend/web/css/site.css
+++ b/source/frontend/web/css/site.css
@@ -1,6 +1,7 @@
 html,
 body {
     height: 100%;
+    background-color: #1F1F1F;
 }
 
 .wrap {
@@ -19,6 +20,37 @@ body {
     background-color: #f5f5f5;
     border-top: 1px solid #ddd;
     padding-top: 20px;
+}
+
+.scrollbar
+{
+    float: left;
+    height: 1000px;
+    width: 100%;
+    background: #000;
+    overflow-y: scroll;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+#style-2::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+#style-2::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+#style-2::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #D62929;
 }
 
 .jumbotron {
