--- a/source/frontend/web/css/site.css
+++ b/source/frontend/web/css/site.css
@@ -150,3 +150,252 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+
+.matches {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    min-height: 100px;
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between;
+    position: relative;
+}
+
+.matches__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 84%;
+    height: 100%;
+    margin-left: 8%;
+    margin-top: 10px;
+    background: url("https://debet.com/images/hot-matches_bg.png") no-repeat 50%;
+    pointer-events: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    z-index: 1;
+    border-radius: 5px 5px 15px 15px;
+}
+
+.matches__column {
+    position: relative;
+}
+
+.matches__column--left .matches__logo {
+    left: 0;
+    transform: translateX(5%);
+}
+
+.matches__logo {
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    top: 5px;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(11,10,13,.7);
+    padding: 5px;
+    z-index: 2;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    overflow: hidden;
+}
+
+.matches__logo img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -o-object-position: center center;
+    object-position: center center;
+}
+
+.matches__logo .swiper-container {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    box-shadow: 0 0 10px rgba(11,10,13,.7);
+}
+
+.matches__column--left .matches__team-name {
+    left: 70px;
+}
+
+.matches__team-name {
+    position: absolute;
+    z-index: 2;
+    top: 30px;
+    width: calc(100% - 70px);
+    height: 25px;
+}
+
+.matches__column--left .matches__odds {
+    left: 70px;
+    text-align: left;
+}
+
+.matches__odds {
+    position: absolute;
+    z-index: 2;
+    font-size: 14px;
+    bottom: 0;
+    white-space: nowrap;
+    width: calc(100% - 120px);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 25px;
+    cursor: pointer;
+}
+
+.matches__team-name p {
+    color: #000;
+    font-weight: 700;
+    font-size: 15px;
+    text-transform: uppercase;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.3em;
+    max-width: 150px;
+}
+
+.matches__odds span:first-child {
+    color: #f8991d;
+    margin-right: 1rem;
+}
+
+.matches__odds span:last-child {
+    font-weight: 700;
+    color: #fff;
+}
+
+.matches__column--center {
+    flex: 0 0 35%;
+    pointer-events: none;
+}
+
+.matches__play-now {
+    position: absolute;
+    top: 12px;
+    left: 0;
+    width: 100%;
+    height: 38px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: url("https://debet.com/images/hot-matches_btn.png") no-repeat bottom;
+    -webkit-animation: btnHotMatchesAnimation 3s linear infinite;
+    animation: btnHotMatchesAnimation 3s linear infinite;
+    background-size: contain;
+    z-index: 0;
+}
+
+.matches__date-time, .matches__date-time span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.matches__date-time {
+    position: absolute;
+    top: 58px;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    height: 25px;
+}
+
+.matches__wrap-main-slide {
+    position: absolute;
+    bottom: -2px;
+    left: 50%;
+    z-index: 2;
+    transform: translate(-50%);
+    width: 132%;
+}
+
+.matches__play-now span {
+    font-family: UTM Colossalis,Arial,sans-serif;
+    color: #000;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: bold;
+    display: block;
+    text-align: center;
+}
+
+.matches__date-time span {
+    color: #000;
+    font-weight: 700;
+}
+
+.matches__date-time, .matches__date-time span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.matches__type {
+    max-width: 70%;
+    margin: 0 auto;
+    position: relative;
+    height: 15px;
+    padding-left: 10px;
+}
+
+.matches__type p {
+    font-size: 12px;
+    text-transform: uppercase;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: center;
+    line-height: 1.3em;
+    color: #ccc;
+}
+
+.matches__column--left, .matches__column--right {
+    flex: 0 0 32%;
+}
+
+.matches__column--right .matches__logo {
+    right: 0;
+    transform: translateX(-5%);
+}
+
+.matches__column--right .matches__team-name {
+    right: 70px;
+}
+
+.matches__team-name .swiper-slide {
+    display: flex;
+    align-items: center;
+}
+
+.matches__column--right .matches__team-name .swiper-slide {
+    justify-content: flex-end;
+}
+
+.matches__column--right .matches__odds {
+    right: 70px;
+    text-align: right;
+}
+
+.matches {
+    margin-top: 30px;
+}
+
+.uk-position-cover {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
