--- a/source/frontend/web/css/site.css
+++ b/source/frontend/web/css/site.css
@@ -8,7 +8,6 @@ body {
     min-height: 100%;
     height: auto;
     margin: 0 auto -60px;
-    padding: 0 0 60px;
 }
 
 .wrap > .container {
@@ -391,11 +390,68 @@ a.desc:after {
     margin-top: 30px;
 }
 
-.uk-position-cover {
-    position: absolute;
-    top: 0;
-    bottom: 0;
+.swiper-container {
+    margin-top: 10px;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 30px;
+}
+.swiper-wrapper{
+    padding-left: initial;
+    margin: 0;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    width: 30%;
+    height: 100%;
+    border: 1px solid black;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.BannerFixed.BannerFixedLeft {
     left: 0;
+}
+
+.BannerFixed.BannerFixedRight {
     right: 0;
 }
+
+.BannerFixed {
+    position: fixed;
+    bottom: 0;
+    z-index: 2;
+}
+.BannerFixed .close-banner {
+    position: absolute;
+    top: 3px;
+    right: 4px;
+    font-size: 15px;
+    color: #fff;
+}
+
+.BannerStickyLeft {
+    position: absolute;
+    top: 0;
+    left: -115px;
+}
+
+.BannerStickyRight {
+    position: absolute;
+}
+
 
