--- a/source/frontend/web/css/site.css
+++ b/source/frontend/web/css/site.css
@@ -468,6 +468,14 @@ a.desc:after {
     font-size: 15px;
     font-weight: bold;
     margin-bottom: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 200px;
+}
+
+a.box-slide-hot {
+    text-decoration: none;
 }
 
 .box-hot-info .name-league {
